cmake_minimum_required(VERSION 3.19)
project(ACCELERATED)

set(CMAKE_CXX_STANDARD 14)

add_executable(wrapGreeting chap2/wrapGreeting.cpp)
add_executable(wrapGreeting2 chap2/wrapGreeting2.cpp)
add_executable(wrapGreeting3 chap2/wrapGreeting3.cpp)
add_executable(wrapGreeting4 chap2/wrapGreeting4.cpp)
add_executable(maxMinString chap4/maxMinString.cpp)
add_executable(one2Hundred chap4/one2Hundred.cpp)
add_executable(one2Hundred2 chap4/one2Hundred2.cpp)
add_executable(one2Thousand chap4/one2Thousand.cpp)
add_executable(score chap4/score.cpp)
add_executable(score2 chap4/score2.cpp)
add_executable(score3 chap4/score3.cpp)
add_executable(score4 chap4/score4.cpp)
add_executable(wordCount chap4/wordCount.cpp)
add_executable(score5 chap5/score5.cpp)
add_executable(score6 chap5/score6.cpp)
add_executable(score7 chap5/score7.cpp)
add_executable(split chap5/split.cpp)
add_executable(testString chap5/testString.cpp)
add_executable(testVector chap5/testVector.cpp)
add_executable(wordCount2 chap5/wordCount2.cpp)
add_executable(palindrome chap6/palindrome.cpp)
add_executable(score8 chap6/score8.cpp)
add_executable(split2 chap6/split2.cpp)
add_executable(testAlgorithm chap6/testAlgorithm.cpp)
add_executable(crossReference chap7/crossReference.cpp)
add_executable(score9 chap7/score9.cpp)
add_executable(wordCount3 chap7/wordCount3.cpp)
add_executable(main chap8/main.cpp)
add_executable(median chap8/median.cpp)
add_executable(test chap8/test.c)


